syntax = "proto3";

package physiosim.v1;

option go_package = "github.com/dhasakgbb/physioSim/backend/gen/physiosim/v1;enginepb";

// EsterType enumerates the supported ester chemistries for injectable compounds.
enum EsterType {
  ESTER_TYPE_UNSPECIFIED = 0;
  ESTER_TYPE_ENANTHATE = 1;
  ESTER_TYPE_PROPIONATE = 2;
  ESTER_TYPE_CYPIONATE = 3;
  ESTER_TYPE_DECANOATE = 4;
  ESTER_TYPE_UNDECANOATE = 5;
}

// Compound captures the pharmacokinetic properties for a single administered agent.
message Compound {
  string id = 1;
  string name = 2;
  double dosage_mg = 3;
  EsterType ester = 4;
  double absorption_k = 5; // ka: absorption rate constant
  double elimination_k = 6; // ke: elimination rate constant
}

// SimulationRequest instructs the engine to run over a set of compounds.
message SimulationRequest {
  repeated Compound compounds = 1;
  int32 duration_days = 2;
}

// DataPoint represents the engine output for a discrete day.
message DataPoint {
  int32 day = 1;
  double serum_concentration = 2;
  double anabolic_score = 3;
  double toxicity_score = 4;
}

// SimulationResponse aggregates all simulated datapoints.
message SimulationResponse {
  repeated DataPoint data_points = 1;
}

service SimulationEngine {
  rpc RunSimulation(SimulationRequest) returns (SimulationResponse);
}
